...
  }) : super(key: key);

  @override
  Widget build(BuildContext context) {
    return Consumer<GameManager>(
      builder: (_, gm, __) => GestureDetector(
        key: const Key('wordTile'),
        onTap: () {
          gm.wordTileTapped(word.word);
        },
        child: FlipAnimation(
          animate: doAnimate(gm, word.word),
          reverse: doReverse(gm, word.word),
...
